# app/Models/Product.php
@@ -1,0 +1,39 @@
+<?php
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\SoftDeletes;
+
+class Product extends Model
+{
+    use SoftDeletes; //deleted_at
+    protected $fillable = [
+        'id',
+        'name',
+        'description',
+        'price_sale',
+        'status',
+        'created_at',
+        'updated_at',
+        'deleted_at',
+    ];
+    protected $hidden = [
+
+        'created_at',
+        'updated_at',
+        'deleted_at',
+    ];
+    const filters = [
+        'name'       => 'like',
+        'desctipton' => 'like',
+        'price_sale' => 'like',
+        'status'     => '=',
+    ];
+
+    /**
+     * Campos de ordenación disponibles.
+     */
+    const sorts = [
+        'id' => 'desc',
+    ];
+}
