# routes/Apis/ProductApi.php
@@ -1,0 +1,14 @@
+<?php
+
+use App\Http\Controllers\ProductController;
+use Illuminate\Support\Facades\Route;
+
+Route::group(["middleware" => ["auth:sanctum"]], function () {
+
+    Route::get('product', [ProductController::class, 'index']);
+    Route::post('product', [ProductController::class, 'store']);
+    Route::get('product/{id}', [ProductController::class, 'show']);
+    Route::put('product/{id}', [ProductController::class, 'update']);
+    Route::delete('product/{id}', [ProductController::class, 'destroy']);
+
+});
